--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "kabuki-motion",
+  "name": "Galactic",
   "version": "0.0.5",
   "private": false,
   "license": "MIT",
-  "author": "bishopz <eduatx@gmail.com>",
-  "description": "boilerplate for web animators",
+  "author": "bobbyc <bobbychan.js@gmail.com>",
+  "description": "Interactive Resume",
   "main": "index.js",
   "scripts": {
     "dev": "npm run clean && nodemon server/index.js --watch server",
@@ -22,7 +22,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:bishopZ/kabuki-motion.git"
+    "url": "ggit@github.com:GallacticGorilla/New-Project1.git"
   },
   "dependencies": {
     "autoprefixer": "^6.1.2",
